# AccessibilitySnapshot

./: .gitignore  .mise.toml  .package.resolved  .swiftformat  .travis.yml  AccessibilitySnapshot.podspec  AccessibilitySnapshotCore.podspec  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  NOTICE.txt  Package.resolved  Package.swift  README.md  VERSIONING.md  WORKSPACE.bazel  algo.swift
.github/: CODEOWNERS
.github/workflows/: ci.yml  pod-lint.yml  xcode-build.yml
.hooks/: pre-commit
AccessibilitySnapshot/Classes/: AccessibilitySnapshotView.swift  FBSnapshotTestCase+Accessibility.swift  FBSnapshotTestCase+ObjCSupport.swift  FBSnapshotTestCase_Accessibility.h  String+Localization.swift  UIAccessibility+SnapshotAdditions.swift  UIAccessibilityStatusUtility.m  UIApplication+DynamicTypeSnapshotting.m  UIView+InvertColorsSnapshotting.swift
Bazel/: 0001-Patch-testonly-swift_library.patch  non_bzlmod_deps.bzl  swift_snapshot_testing.BUILD.bazel
Documentation/: Core-Architecture.md  README.md
Example/: .package.resolved  Gemfile  Podfile  Project.swift  README.md  Workspace.swift
Example/AccessibilitySnapshot/: AccessibilityContainerViewController.swift  AccessibilityCustomActionsViewController.swift  AccessibilityCustomContentViewController.swift  AccessibilityCustomRotorsViewController.swift  AccessibilityFeatureShowcaseView.swift  AccessibilityPathViewController.swift  AccessibilityViewController.swift  ActivationPointViewController.swift  AppDelegate.swift  BlockBasedAccessibilityViewController.swift  ButtonAccessibilityTraitsViewController.swift  ButtonShapesViewController.swift  ColorPaletteViewController.swift  ContainerHierarchyViewController.swift  DataTableViewController.swift  DemoKeyboardShortcuts.swift  (+45 more)
Example/AccessibilitySnapshot.xcodeproj/: project.pbxproj
Example/AccessibilitySnapshot.xcworkspace/: contents.xcworkspacedata
Scripts/: CompareRenamedSnapshots.swift  ExtractImagesFromTestResults.sh  ExtractImagesFromTestResults.swift  ValidateLocalizedStrings.swift  build.swift  ci.sh  install-git-hooks.sh  regenerate-snapshots.sh
Sources/AccessibilitySnapshot/Core/: AccessibilityColorPalette.swift  AccessibilityRenderer.swift  AccessibilitySnapshotBaseView.swift  AccessibilitySnapshotConfiguration.swift  AccessibilitySnapshotView.swift  AttributedLabelView.swift  BUILD.bazel  Bundle+Resources.swift  CustomActionsView.swift  CustomContentView.swift  CustomRotorsView.swift  DefaultColors.swift  HitTargetSnapshotUtility.swift  HitTargetSnapshotView.swift  KeyboardAccessibilitySnapshotView.swift  KeyboardShortcutLegendView.swift  KeyboardShortcutParser.swift  LayoutEngine.swift  LegendLayoutMetrics.swift  LegendView.swift  LetterIconView.swift  Localizations.swift  NSObject+Accesibility.swift  NSObject+Accessibility.swift  OverlayView.swift  PillsView.swift  SnapshotAndLegendView.swift  UIApplication+FirstKeyWindow.swift  UIView+ImageRendering.swift  UIView+InvertColorsSnapshotting.swift  ViewRenderingMode.swift
Sources/AccessibilitySnapshot/Core/Assets/Images.xcassets/Crosshairs.imageset/: Contents.json
Sources/AccessibilitySnapshot/Core/ObjC/: UIAccessibilityStatusUtility.m  UIView+DynamicTypeSnapshotting.m
Sources/AccessibilitySnapshot/Core/ObjC/include/: UIAccessibilityStatusUtility.h
Sources/AccessibilitySnapshot/Core/Swift/AccessibilityPreview/: AccessibilityPreview.swift
Sources/AccessibilitySnapshot/Core/Swift/Assets/de.lproj/: Localizable.strings
Sources/AccessibilitySnapshot/Core/Swift/Assets/en.lproj/: Localizable.strings
Sources/AccessibilitySnapshot/Core/Swift/Assets/ru.lproj/: Localizable.strings
Sources/AccessibilitySnapshot/Core/Swift/Classes/: AccessibilityHierarchyParser.swift  AccessibilitySnapshotView+PillsView.swift  AccessibilitySnapshotView.swift  CATransactionConfiguration.swift  HitTargetSnapshotUtility.swift  HitTargetSnapshotView.swift  Localizations.swift  SnapshotAndLegendView.swift  String+Localization.swift  UIAccessibility+EffectiveProperties.swift  UIAccessibility+SnapshotAdditions.swift  UIApplication+FirstKeyWindow.swift  UIView+ImageRendering.swift  UIView+InvertColorsSnapshotting.swift  ViewRenderingMode.swift
Sources/AccessibilitySnapshot/Core/Swift/Classes/ColorBlindness/: ColorBlindnessType.swift  ImageFilterMatrix.swift  Matrix.swift  MatrixTypes.swift  UIImage+ApplyMatrix.swift  UIImage+ColorBlindFilter.swift
Sources/AccessibilitySnapshot/Core/Swift/Classes/Utilities/: Comparable+Additions.swift
Sources/AccessibilitySnapshot/Core/SwiftUI/: AccessibilityColorPalette.swift  ActivationPointView.swift  DescriptionView.swift  ElementView.swift  HintView.swift  LegendEntryView.swift  SwiftUIAccessibilitySnapshotView.swift  SwiftUICustomActionsView.swift  SwiftUICustomContentView.swift  SwiftUICustomRotorsView.swift  SwiftUILegendView.swift  UserInputLabelsView.swift
Sources/AccessibilitySnapshot/Core/UIKit/: AccessibilitySnapshotView.swift  CustomActionsView.swift  CustomRotorsView.swift  HitTargetSnapshotView.swift  LegendView.swift  LetterIconView.swift  OverlayView.swift  PillsView.swift
Sources/AccessibilitySnapshot/SnapshotTesting/: BUILD.bazel  SnapshotTesting+Accessibility.swift  SnapshotTesting+ColorBlindness.swift  SnapshotTesting+ImpreciseAccessibility.swift  SnapshotTesting+Keyboard.swift  SnapshotTesting+SwiftUI.swift
Sources/AccessibilitySnapshot/iOSSnapshotTestCase/: BUILD.bazel  ErrorMessageFactory.swift  FBSnapshotTestCase+Accessibility.swift  FBSnapshotTestCase+ObjCSupport.swift  FBSnapshotTestCase_Accessibility.h
Sources/AccessibilitySnapshot/iOSSnapshotTestCase/ObjC/: FBSnapshotTestCase_Accessibility.m
Sources/AccessibilitySnapshot/iOSSnapshotTestCase/ObjC/include/: FBSnapshotTestCase_Accessibility.h  FBSnapshotTestCase_ImpreciseAccessibility.h
Sources/AccessibilitySnapshot/iOSSnapshotTestCase/Swift/: ErrorMessageFactory.swift  FBSnapshotTestCase+Accessibility.swift  FBSnapshotTestCase+ImpreciseAccessibility.swift  FBSnapshotTestCase+Keyboard.swift  FBSnapshotTestCase+ObjCSupport.swift  FBSnapshotTestCase+SwiftUI.swift
docs/: ios18-accessibility-path-bug-investigation.md
(+211 files in other folders)
