"""Defines the Bazel module."""

module(
    name = "accessibility_snapshot",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(
    name = "apple_support",
    version = "1.11.1",
)
bazel_dep(
    name = "rules_apple",
    version = "3.1.1",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "1.14.0",
    repo_name = "build_bazel_rules_swift",
)

# Load non-bzlmod dependencies
non_bzlmod_deps = use_extension("//Bazel:non_bzlmod_deps.bzl", "non_bzlmod_deps")
use_repo(
    non_bzlmod_deps,
    "ios_snapshot_test_case",
    "swift_snapshot_testing",
)

apple_cc_configure = use_extension("@apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc")
